--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # ignore python cache
 __pycache__
 
+# ignore package build files
+*.egg-info
+
 # ignore temporary files for training and testing
 data
 runs
