--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ opencv-python==4.10.0.84
 openmesh==1.2.1
 pillow==10.4.0
 setuptools==74.1.2
+tensorboard==2.17.0
 torch==2.2.0
 torchaudio==2.2.0
 torchvision==0.17.0
