--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ kornia==0.7.4
 kornia-rs==0.1.7
 matplotlib==3.9.2
 mediapipe==0.10.14
+loguru==0.7.3
 mmengine==0.10.4
 numpy==1.26.4
 opencv-contrib-python==4.10.0.84
