--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+h5py==3.12.1
 kornia==0.7.4
 kornia-rs==0.1.7
 matplotlib==3.9.2
@@ -8,6 +9,7 @@ numpy==1.26.4
 opencv-contrib-python==4.10.0.84
 opencv-python==4.10.0.84
 openmesh==1.2.1
+pandas==2.2.0
 pillow==10.4.0
 setuptools==74.1.2
 tensorboard==2.17.0
