Detect sparse 3D and 2D face landmarks using 3DDFA-v2

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ mmengine==0.10.4
 numpy==1.26.4
 opencv-contrib-python==4.10.0.84
 opencv-python==4.10.0.84
+onnxruntime==1.18.1
 pandas==2.2.0
 pillow==10.4.0
 setuptools==74.1.2
