--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ __pycache__
 # ignore temporary files for training and testing
 data/*
 !data/.gitkeep
+logs/*
+!logs/.gitkeep
 runs/*
 !runs/.gitkeep
 
