--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,8 @@ onnxruntime==1.18.1
 pandas==2.2.0
 pillow==10.4.0
 setuptools==74.1.2
+scikit-image==0.25.2
+scikit-learn==1.7.1
 tensorboard==2.17.0
 torch==2.2.0
 torchaudio==2.2.0
